manifests/applications/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin-prod-media-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    rollingUpdate: 
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        readOnlyRootFilesystem: true
      automountServiceAccountToken: false
      containers:
      - securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        image: docker.io/jellyfin/jellyfin
        name: jellyfin
        ports:
          - containerPort: 8096
            name: http
            protocol: TCP
        resources: {}
        volumeMounts:
        - name: app-data
          mountPath: /config
        - name: tv-data
          mountPath: /tv
        - name: movies-data
          mountPath: /movies
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: jellyfin-prod-media-pvc
      - name: tv-data
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/tv
          readOnly: true
      - name: movies-data
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/movies
          readOnly: true
