manifests/applications/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-prod-media-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: "jellyfin.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyfin-prod-media-svc
            port:
              number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-prod-media-ingress-https
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: cert-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jellyfin.cbxon.co.uk
    secretName: media-prod-tls
  rules:         
  - host: "jellyfin.cbxon.co.uk"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyfin-prod-media-svc
            port:
              number: 8096
